:lipstick: Make the image a BG to see if that stops the flicker on re-render

--- a/components/Sections/FeaturedTreatments/TreatmentCard.module.scss
+++ b/components/Sections/FeaturedTreatments/TreatmentCard.module.scss
@@ -20,6 +20,9 @@
   margin-bottom: -60px;
   transform: translateY(-50%);
   position: relative;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 
   &::before {
     top: 0;
@@ -30,10 +33,5 @@
     content: "";
     box-shadow: 0px 0px 20px 1px rgba(0, 0, 0, 0.2);
     border-radius: 75px 75px 0 0;
-  }
-
-  img {
-    border-radius: 50%;
-    object-fit: cover;
   }
 }
